Wed May 18 17:13:53 2005  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_valuetype/field_ch.cpp:
        * TAO_IDL/be_include/be_visitor_valuetype/field_ch.h:

          Make valuetype anonymous private sequence member definitions
          public rather than private.

          This fixes Bugzilla #2119.

        * tests/Bug_2119_Regression/README:
        * tests/Bug_2119_Regression/test.idl:
        * tests/Bug_2119_Regression/test.mpc:

          Regression test for the above.

        * tao/Synch_Invocation.cpp:

          Add COMM_FAILURE to the list of SystemExceptions that can be
          retried in a fault tolerant configuration.

          This fixes Bugzilla #2118.

Wed May 18 10:29:33 2005  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * tao/Transport_Cache_Manager.cpp:
	  Fixed Borland build problems and some stylistic improvements
	  to logging.

Wed May 18 15:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PIForwardRequest.pidl:
          Fixed fuzz error

Wed May 18 13:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.h:
          Doxygen improvement

Wed May 18 12:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/corba.h:
          Removed duplicate includes

Wed May 18 12:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableInterceptor.pidl:
          Moved several interfaces to their own file

        * tao/ClientRequestInterceptor.pidl:
        * tao/Interceptor.pidl:
        * tao/PIForwardRequest.pidl:
        * tao/ServerRequestInterceptor.pidl:
          New files, contains parts of the original PortableInterceptor.pidl

        * tao/ClientRequestInterceptorA.cpp:
        * tao/ClientRequestInterceptorC.cpp:
        * tao/ClientRequestInterceptorC.h:
        * tao/ClientRequestInterceptorS.h:
        * tao/InterceptorA.cpp:
        * tao/InterceptorC.cpp:
        * tao/InterceptorC.h:
        * tao/InterceptorS.h: