@@ -1,3 +1,12 @@
+Wed May 18 13:05:48 2005  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>
+
+        * tao/Transport_Cache_Manager.cpp:
+
+	  Reverted changes that added printing of the stringified
+	  endpoint address, because it is not possible to pre-determine
+	  the lenght of the character representation for all protocols' 
+	  endpoints. Thanks Johny and Ossama.
+
 Wed May 18 17:13:53 2005  Simon McQueen  <sm@prismtech.com>
 
         * TAO_IDL/be/be_visitor_valuetype/field_ch.cpp:
@@ -24,8 +33,8 @@ Wed May 18 17:13:53 2005  Simon McQueen  <sm@prismtech.com>
 Wed May 18 10:29:33 2005  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>
 
         * tao/Transport_Cache_Manager.cpp:
-	  Fixed Borland build problems and some stylistic improvements
-	  to logging.
+          Fixed Borland build problems and some stylistic improvements
+          to logging.
 
 Wed May 18 15:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
